# collectionScripts

./: .gitignore  LICENSE  README.md
bash/: .bashrc_my  extract.sh  podman-static-install.sh  podman-static-uninstall.sh
cmake/: ClangTidy.cmake  LazyBoost.cmake  QtUtils.cmake  gcc.cmake  msvc.cmake
kitty/: kitty.conf
lazygit/: README.md  config.yml
nushell/: config.nu  env.nu  fastfetch.jsonc
nushell/scripts/: cmake.nu  msvc.nu  prompt.nu  rust.nu  utils.nu
nvim/: README.md  big_file.lua  gui.lua  init_lsp.lua  sysinit.vim  terminal.lua
powershell/: clang_utils.ps1  cmake.ps1  docker.ps1  linux_ps.ps1  pngcompress.ps1  profile.ps1  prompt.ps1  ps_function.ps1  rust_update.ps1  rust_utils.ps1  set_compiler.ps1  vcpkg.ps1  vcvars_env.ps1  watch.ps1
python/: bte_gen.py  code_trim.py  kakuyomu.py  qbt_convertor.py  tiny_png.py  tox_vim_updater.py
python/CodeTrimmer/: CodeTrimmer.py  CodeTrimmer2.py
python/art/: fs.py  sorter.py  trace.py
python/tpp/: bencode.py
python/win32/: Amayui_Castle_Meister.py  Kami_no_Rhapsody_cheat.py  Sankai_Ou_no_Yubiwa_cheat.py  WindowsClipboard.py  clipboard.py  eushully_nocd.py  windows.py
renpy/: extras.rpy
rust/: clean.ps1  copy_files.rs  lgit.rs  options  pngcompress.rs
rust/clipboard_monitor/: Cargo.toml
rust/clipboard_monitor/src/: alpha_raid.rs  alpha_ride.rs  evolimit.rs  genrin2.rs  izumo.rs  magnet.rs  main.rs  manager.rs  senkou.rs  utils.rs  vn.rs  wget.rs
rust/eushully/: Cargo.toml
rust/gen_rand_number/: Cargo.toml
rust/hash_sum/: Cargo.toml
rust/md_render/: Cargo.toml
rust/scripts/: Cargo.toml
rust/scripts/src/: copy_files.rs  lgit.rs  pngcompress.rs
rust/vim_updater/: Cargo.toml
rust/vim_updater/src/: main.rs
vim/: _vimrc
wezterm/: init.lua
(+10 files in other folders)
