[package]
name = "clipboard_monitor"
version = "1.0.0"
authors = ["DoumanAsh <custparasite@gmx.se>"]

[dependencies]
clipboard-win = "*"

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bin]]
name = "clipboard_monitor"
path = "src/main.rs"

[[bin]]
name = "vn_text_corrector"
path = "src/vn.rs"
