[package]
name = "scripts"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bin]]
name = "lgit"
path = "src/lgit.rs"

[[bin]]
name = "pngcompress"
path = "src/pngcompress.rs"

[[bin]]
name = "copy_files"
path = "src/copy_files.rs"
