[package]
name = "vim_updater"
version = "1.0.0"
authors = ["DoumanAsh <custparasite@gmx.se>"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies]
rusty-cute-macros = "*"
regex = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
